--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 <footer class="footer">
    <div class="footer__container _container">
       <div class="footer__el footer__el-menu">
-         <div class="footer__logo"><picture><source srcset="../img/Logo.webp" type="image/webp"><img src="img/Logo.png" alt=""></picture></div>
+         <div class="footer__logo"><picture><source srcset="img/Logo.webp" type="image/webp"><img src="img/Logo.png" alt=""></picture></div>
          <ul class="footer__list">
                  <li><a href="#" class="footer__link footer__link-active">Главная</a></li>
                  <li><a href="#" class="footer__link">О нас</a></li>
