fix font, add link (tel, mailto)

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             <header class="header" >
         <div class="_container">
             <div data-da="menu__list,5,1145" class="header__contacts">
-                <a class="header__contacts-link header__contacts-link-phone" href="#">+7 (911) 696 84 63</a>
-                <a class="header__contacts-link header__contacts-link-mail" href="#">info@english.ru</a>
+                <a class="header__contacts-link header__contacts-link-phone" href="tel:79116968463">+7 (911) 696 84 63</a>
+                <a class="header__contacts-link header__contacts-link-mail" href="mailto:info@english.ru">info@english.ru</a>
                 <a class="header__contacts-link header__contacts-link-map" href="#">Псков, ул. Ленина, 3</a>
                 <a class="header__contacts-link header__contacts-link-inst" href="#"></a>
                 <a class="header__contacts-link header__contacts-link-vk" href="#"></a>
@@ -313,8 +313,8 @@
    </div>
    <div class="_container">
       <div  class="footer__contacts">
-         <a class="footer__contacts-link footer__contacts-link-phone" href="#">+7 (911) 696 84 63</a>
-         <a class="footer__contacts-link footer__contacts-link-mail" href="#">info@english.ru</a>
+         <a class="footer__contacts-link footer__contacts-link-phone" href="tel:79116968463">+7 (911) 696 84 63</a>
+         <a class="footer__contacts-link footer__contacts-link-mail" href="mailto:info@english.ru">info@english.ru</a>
          <a class="footer__contacts-link footer__contacts-link-map" href="#">Псков, ул. Ленина, 3</a>
       </div>
    </div>
